Рефракторинг для тестов